--- a/style.css
+++ b/style.css
@@ -6,4 +6,7 @@
     width: 100%;
     height: 300px;
     background-image: url("images/IMG_4229.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
