--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 }
 
 .wrapper {
-    width: 100%;
     height: 300px;
     background-image: url("images/IMG_4229.png");
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
