--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .title {
-    box-shadow: 0 0 2em black;
+    box-shadow: 0 0 2em grey;
+    border-radius: 5px;
     margin: 50px auto;
 }
